--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -25,12 +25,11 @@ body {
 .header {
     height: 95vh;
     background-image:linear-gradient(to right bottom,
-     rgba(120,213,111,0),
+     rgba(126,213,111,0.8),
     rgba(40,100,131,0.8)),
      url(/img/hero.jpg);
     background-size: cover;
     background-position: top;
 
-    clip-path: polygon(0 0, 90% 300px, 0 100%);
-
+    clip-path: polygon(0 0, 100% 0, 100% 75vh,0 100%);
 }
