Added animation on header

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -44,17 +44,27 @@ body {
   height: 35px;
 }
 
+.header-text{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
 }
 
-.heading-primay-main {
+.heading-primary-main {
     display: block;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation: moveInLeft 0.9s ease-out;
 }
 
 .heading-primary-sub {
@@ -63,4 +73,38 @@ body {
   font-weight: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+  animation: moveInRight 0.9s ease-out;
+}
+
+/* animation */
+
+@keyframes moveInLeft {
+    0% {
+       opacity: 0;
+       transform: translateX(-100px);
+    }
+
+    80% {
+       transform: translateX(10px);
+    }
+
+    100%{
+       opacity: 1;
+       transform: translate(0);
+    }
+}
+@keyframes moveInRight {
+    0% {
+       /* opacity: 0; */
+       transform: translateX(100px);
+    }
+
+    80% {
+       transform: translateX(-10px);
+    }
+
+    100%{
+       /* opacity: 1; */
+       transform: translate(0);
+    }
 }
