--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,14 +6,18 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-* {
+*,
+*::after,
+*::before
+{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html {
-    font-size: 10px;
+    /* this uis the size of user define pixel default is 16px if user change than it takes % */
+    font-size: 62.5%;
 }
 body {
     font-family: "Lato",sans-serif;
@@ -22,6 +26,7 @@ body {
     line-height: 1.7;
     color:#777;
     padding:3rem;
+    box-sizing: border-box;
 }
 
 .header {
@@ -36,17 +41,17 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 75vh,0 100%);
 }
 
-.logo-box{
+.header__logo-box{
     position: absolute;
     top:4rem;
     left: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3.5rem;
 }
 
-.header-text{
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -63,7 +68,7 @@ body {
 
 }
 
-.heading-primary-main {
+.heading-primary--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -71,7 +76,7 @@ body {
     animation: moveInLeft 0.9s ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 2rem;
@@ -148,7 +153,7 @@ body {
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
 
-.btn-white {
+.btn--white {
     background-color: #fff;
 }
 
@@ -165,7 +170,7 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after{
+.btn--white::after{
     background-color: #fff;
 }
 
@@ -174,7 +179,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom 0.5s ease-out .75s;
     animation-fill-mode: backwards;
 }
