--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -11,6 +11,8 @@ $color-primary: #55c57a;
 $color-primary-dark: #28b485;
 $color-primary-light: #7ed56f;
 
+$color-grey-dark: #777;
+$color-white: #fff;
 *,
 *::after,
 *::before
@@ -18,6 +20,7 @@ $color-primary-light: #7ed56f;
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+
 }
 
 html {
@@ -29,7 +32,7 @@ body {
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
-    color:#777;
+    color: $color-grey-dark;
     padding:3rem;
     box-sizing: border-box;
 }
@@ -65,7 +68,7 @@ body {
 }
 
 .heading-primary {
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -159,7 +162,8 @@ body {
 }
 
 .btn--white {
-    background-color: #fff;
+    background-color: $color-white;
+    color: $color-grey-dark;
 }
 
 .btn::after {
@@ -176,7 +180,7 @@ body {
 }
 
 .btn--white::after{
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after{
