--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -1,11 +1,7 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
+@import "./bass/base";
+@import "./bass/animation";
+@import "./bass/typography";
+@import "./bass/utilities";
 
 $color-primary: #55c57a;
 $color-primary-dark: #28b485;
@@ -42,31 +38,33 @@ body {
 .header {
     height: 95vh;
     background-image:linear-gradient(to right bottom,
-     rgba($color-primary-light,0.8),
+    rgba($color-primary-light,0.8),
     rgba($color-primary-dark,0.8)),
-     url(/img/hero.jpg);
+    url(/img/hero.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
     clip-path: polygon(0 0, 100% 0, 100% 75vh,0 100%);
-}
 
-.header__logo-box{
-    position: absolute;
-    top:4rem;
-    left: 4rem;
-}
 
-.header__logo {
-  height: 3.5rem;
-}
+    &__logo-box{
+        position: absolute;
+        top:4rem;
+        left: 4rem;
+    }
 
-.header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
+    &__logo {
+        height: 3.5rem;
+       }
+
+    &__text-box {
+       position: absolute;
+       top: 40%;
+       left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
+
 }
 
 .heading-primary {
@@ -76,25 +74,23 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
-}
+    &--main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation: moveInLeft 0.9s ease-out;
+    }
 
-.heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 0.9s ease-out;
+    &--sub {
+       display: block;
+       font-size: 2rem;
+       font-weight: 2rem;
+       font-weight: 700;
+       letter-spacing: 1.75rem;
+       animation: moveInRight 0.9s ease-out;
+    }
 }
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.75rem;
-  animation: moveInRight 0.9s ease-out;
-}
-
 /* animation */
 
 @keyframes moveInLeft {
@@ -139,58 +135,59 @@ body {
     }
 }
 
+.btn {
+    &:link,
+    &:visited {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: $color-black;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: all .2s;
+        position: relative;
+        font-size: 1.6rem;
+    }
 
-.btn:link,
-.btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: $color-black;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all .2s;
-    position: relative;
-    font-size: 1.6rem;
-}
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black,.2);
 
-.btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black,.2);
-}
+        &::after{
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
 
-.btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba($color-black,.2);
-}
+    &:active{
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-black,.2);
+    }
 
-.btn--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-}
+    &--white {
+        background-color: $color-white;
+        color: $color-grey-dark;
 
-.btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
+        &::after{
+            background-color: $color-white;
+        }
+    }
 
-.btn--white::after{
-    background-color: $color-white;
-}
+    &::after {
+        content: "";
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 10rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all .4s;
+    }
 
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
-
-.btn--animated {
-    animation: moveInBottom 0.5s ease-out .75s;
-    animation-fill-mode: backwards;
+    &--animated {
+        animation: moveInBottom 0.5s ease-out .75s;
+        animation-fill-mode: backwards;
+    }
 }
