--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-
+//color
 $color-primary: #55c57a;
 $color-primary-dark: #28b485;
 $color-primary-light: #7ed56f;
@@ -6,3 +6,9 @@ $color-primary-light: #7ed56f;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+//grid
+
+$grid-width:114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
