--- a/Natours/starter/sass/bass/_typography.scss
+++ b/Natours/starter/sass/bass/_typography.scss
@@ -33,3 +33,22 @@ body {
        animation: moveInRight 0.9s ease-out;
     }
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+
+    &:hover {
+        transform:skewY(2deg) skewX(2deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
