--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./pages/home";
 
 @import "./components/btn";
+@import "./components/composition";
 
 @import "./layout/header";
 @import "./layout/grid";
