--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -148,6 +148,12 @@ body {
   transform: skewY(7deg);
 }
 
+.section-tour {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -10rem;
+}
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -268,6 +274,59 @@ body {
 }
 .feature-box:hover {
   transform: translateY(-1.5rem) scale(1.03);
+}
+
+.card {
+  perspective: 150rem;
+  --moz-perspective: 150rem;
+  position: relative;
+  height: 50rem;
+}
+.card__side {
+  height: 50rem;
+  transition: all 0.8s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 0.3rem;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+}
+.card__side--front {
+  background-color: #fff;
+}
+.card__side--back {
+  transform: rotateY(180deg);
+}
+.card__side--back-1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+}
+.card__side--back-2 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+.card__side--back-3 {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
+}
+.card:hover .card__side--front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card__side--back {
+  transform: rotateY(0);
+}
+.card__picture {
+  background-size: cover;
+  height: 23rem;
+}
+.card__picture--1 {
+  background-image: url(../img/nat-5.jpg);
+}
+.card__picture--2 {
+  background-image: url(/img/nat-6.jpg);
+}
+.card__picture--3 {
+  background-image: url(.../img/nat-7.jpg);
 }
 
 .header {
