--- a/Natours/starter/sass/components/_btn.scss
+++ b/Natours/starter/sass/components/_btn.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -10,6 +11,13 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // change for the button element in form
+        border: none;
+        cursor: pointer;
+
+
+
     }
 
     &:hover {
@@ -22,7 +30,8 @@
         }
     }
 
-    &:active{
+    &:active, 
+    &:focus {
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
