--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -697,4 +697,28 @@ body {
   float: right;
 }
 
+.navigation__checkbox {
+  display: none;
+}
+.navigation__button {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000;
+}
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#7ed56f, #7ed56f);
+  z-index: 1000;
+}
+
 /*# sourceMappingURL=style.css.map */
