--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -17,6 +17,8 @@
 @import "./components/story";
 @import "./components/bg-video";
 @import "./components/form";
+@import "./components/popup";
+
 
 @import "./layout/header";
 @import "./layout/grid";
