--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -595,6 +595,9 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 4000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
 }
 .popup__content {
   position: absolute;
@@ -609,6 +612,9 @@ body {
   border-radius: 0.3rem;
   display: table;
   overflow: hidden;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: all 0.4s 0.2s;
 }
 .popup__left {
   width: 33.333333%;
@@ -637,6 +643,27 @@ body {
   -ms-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
+}
+.popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+.popup:target .popup__content {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+.popup__close:link, .popup__close:visited {
+  color: #777;
+  position: absolute;
+  top: 2.5rem;
+  right: 2.5rem;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 3rem;
+  line-height: 1;
+}
+.popup__close:hover {
+  color: #55c57a;
 }
 
 .header {
