created responsive using media queary

--- a/Natours/starter/sass/components/_popup.scss
+++ b/Natours/starter/sass/components/_popup.scss
@@ -34,6 +34,10 @@
     &__img {
         display: block;
         width: 100%;
+
+        @include response (tab-port) {
+            height: auto;
+        }
     }
 
     &__right {
