--- a/Natours/starter/sass/bass/_base.scss
+++ b/Natours/starter/sass/bass/_base.scss
@@ -10,9 +10,36 @@
 
 html {
     /* this uis the size of user define pixel default is 16px if user change than it takes % */
-    font-size: 62.5%;
+    font-size: 62.5%; // 1 rem = 10px; 10/16px = 62.5%
+
+    @include response(tab-land) {
+        font-size: 56.25%; //1rem =9px ; 9/16 = 56.75%
+    }
+
+    @include response(tab-port) {
+        font-size: 50%; //1rem =8px ; 8/16 = 50%
+    }
+
+    @include response(big-desktop) {
+        font-size: 75%;//1rem =12px ; 12/16 = 75%
+    }
+
+    // @include response(phone) {
+    //     font-size: 50%;
+    // }
 }
 
 body {
     box-sizing: border-box;
+    padding:3rem;
+
+    @include response(tab-land) {
+        padding:0;
+    }
+
+}
+
+::selection {
+    background-color: $color-primary;
+    color: $color-white;
 }
