--- a/Natours/starter/sass/bass/_typography.scss
+++ b/Natours/starter/sass/bass/_typography.scss
@@ -5,8 +5,6 @@ body {
     /* font-size: 16px; */
     line-height: 1.7;
     color: $color-grey-dark;
-    padding:3rem;
-    box-sizing: border-box;
 }
 
 .heading-primary {
@@ -16,13 +14,25 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
+    @include response(phone) {
+        letter-spacing: 1rem;
+        font-family: 5rem;
+    }
+
     &--main {
         display: block;
         font-size: 6rem;
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveInLeft 0.9s ease-out;
+
+        @include response(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
+
     }
+
 
     &--sub {
        display: block;
@@ -31,6 +41,10 @@ body {
        font-weight: 700;
        letter-spacing: 1.75rem;
        animation: moveInRight 0.9s ease-out;
+
+       @include response(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -46,6 +60,13 @@ body {
     letter-spacing: .2rem;
     transition: all .2s;
 
+    @include response(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include response(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform:skewY(2deg) skewX(2deg) scale(1.1);
