--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include response(tab-port) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include response(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
@@ -19,6 +27,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem ;
         display: inline-block;
+
+        @include response(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -29,7 +42,7 @@
         display: inline-block;
 
         &:not(:last-child) {
-            margin-right: 1.5rem;
+            margin-right: 1rem;
         }
     }
 
@@ -58,6 +71,11 @@
         padding-top: 2rem ;
         width: 80%;
         float: right;
+
+        @include response(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 
 }
